fixes #3384 - New Nav                     - align top menu items separator with next row menu items separator - fixed so it's not affected by variable user name

--- a/ckanext-hdx_theme/ckanext/hdx_theme/fanstatic/base/header.css
+++ b/ckanext-hdx_theme/ckanext/hdx_theme/fanstatic/base/header.css
@@ -313,7 +313,6 @@ body {
   font-weight: 400;
   font-size: 12px;
   text-transform: uppercase;
-  line-height: 25px;
   color: #eeeeee;
 }
 .newHeader .header-user-box i,
@@ -471,6 +470,17 @@ body {
 }
 /* END HDX Version display */
 /* Style links inside header-nav, main navigation links */
+.mainLinks.mainLinks-gray > li > a {
+  font-family: 'Gotham-Book', sans-serif;
+  font-weight: 400;
+  font-size: 12px;
+  color: #cccccc;
+  line-height: 1;
+}
+.mainLinks.mainLinks-gray > li > a:hover,
+.mainLinks.mainLinks-gray > li > a:focus {
+  color: #cccccc;
+}
 .mainLinks {
   padding-left: 25px;
   margin: 0;
@@ -515,29 +525,6 @@ body {
   content: '\25bc';
   margin-left: 3px;
   font-size: 13px;
-}
-.mainLinks > li #faq-label:after {
-  content: '';
-}
-.mainLinks > li #feedback-label:after {
-  content: '';
-}
-.mainLinks > li #faq-label:before {
-  content: '|';
-  font-size: 13px;
-  margin-right: 15px;
-}
-.mainLinks > li #feedback-label:before {
-  content: '|';
-  font-size: 13px;
-  margin-right: 15px;
-}
-.mainLinks > li #faq-label {
-  font-family: 'Gotham-Book', sans-serif;
-}
-.mainLinks > li #feedback-label {
-  font-family: 'Gotham-Book', sans-serif;
-  margin-left: 0px;
 }
 .mainLinks > li:first-child > a {
   margin-left: 0;
